<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Quiz">

    <ScrollView
        android:id="@+id/scrollView4"
        style="@android:style/Widget.DeviceDefault.Light.ScrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbarStyle="insideInset"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView23"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="163dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="149dp"
                android:layout_marginBottom="26dp"
                android:text="@string/quiz"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                tools:layout_editor_absoluteX="163dp"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginBottom="4dp"
                android:text="@string/quest_1"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:visibility="visible"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="63dp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="4dp"
                tools:layout_editor_absoluteX="52dp"
                tools:layout_editor_absoluteY="176dp"
                android:id="@+id/q1Group">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/q1_spinner" />

                <RadioButton
                    android:id="@+id/ans_q1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/q1_imageview" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/q1_toast" />

                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/q1_edittext" />
            </RadioGroup>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="?android:attr/listDivider"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="239dp" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="4dp"
                android:text="@string/quest_2"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:visibility="visible"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="245dp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="4dp"
                tools:layout_editor_absoluteX="114dp"
                tools:layout_editor_absoluteY="342dp"
                android:id="@+id/q2Group">

                <RadioButton
                    android:id="@+id/radioButton5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/q2_level_1" />

                <RadioButton
                    android:id="@+id/radioButton6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/q2_level_21" />

                <RadioButton
                    android:id="@+id/radioButton7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/q2_level_12" />

                <RadioButton
                    android:id="@+id/ans_q2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/q2_level_11" />
            </RadioGroup>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="?android:attr/listDivider"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="400dp" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="4dp"
                android:text="@string/quest_3"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:visibility="visible"
                tools:layout_editor_absoluteX="29dp"
                tools:layout_editor_absoluteY="405dp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="4dp"
                tools:layout_editor_absoluteX="118dp"
                tools:layout_editor_absoluteY="441dp"
                android:id="@+id/q3Group">

                <RadioButton
                    android:id="@+id/radioButton9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/q3_getCalendarView" />

                <RadioButton
                    android:id="@+id/ans_q3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/q3_getWeek" />

                <RadioButton
                    android:id="@+id/radioButton11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/q3_getYear" />

                <RadioButton
                    android:id="@+id/radioButton12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/q3_updateDate" />
            </RadioGroup>

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="?android:attr/listDivider"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="600dp" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="4dp"
                android:text="@string/quest_4"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:visibility="visible" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="4dp"
                android:id="@+id/q4Group">

                <RadioButton
                    android:id="@+id/radioButton14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/q4_op2" />

                <RadioButton
                    android:id="@+id/ans_q4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/q4_op1" />

                <RadioButton
                    android:id="@+id/radioButton15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/q4_op3" />

                <RadioButton
                    android:id="@+id/radioButton16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/q4_op4" />
            </RadioGroup>

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="?android:attr/listDivider"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="800dp" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="4dp"
                android:text="@string/quest_5"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:visibility="visible" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="4dp"
                android:id="@+id/q5Group">

                <RadioButton
                    android:id="@+id/radioButton20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/q5_op1" />

                <RadioButton
                    android:id="@+id/ans_q5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/q5_op2" />

                <RadioButton
                    android:id="@+id/radioButton19"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/q5_op3" />

                <RadioButton
                    android:id="@+id/radioButton18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/q5_op4" />

            </RadioGroup>

            <Button
                android:id="@+id/btn_done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/finished_quiz"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtView_yourScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/txtView_highScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>