<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GUI">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="109dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="465dp"
        android:text="@string/gui_components"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_toast"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="41dp"
        android:text="@string/toast"
        app:layout_constraintBottom_toTopOf="@+id/btn_imgView"
        app:layout_constraintEnd_toStartOf="@+id/btn_datePicker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/btn_datePicker"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="24dp"
        android:text="@string/datepicker"
        app:layout_constraintBottom_toTopOf="@+id/btn_lv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_toast"
        app:layout_constraintTop_toBottomOf="@+id/textView3"/>

    <Button
        android:id="@+id/btn_imgView"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="33dp"
        android:text="@string/imageview"
        app:layout_constraintBottom_toTopOf="@+id/btn_spinner"
        app:layout_constraintEnd_toStartOf="@+id/btn_lv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_toast" />

    <Button
        android:id="@+id/btn_lv"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:text="@string/listview"
        app:layout_constraintBottom_toTopOf="@+id/btn_edtTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_imgView"
        app:layout_constraintTop_toBottomOf="@+id/btn_datePicker" />

    <Button
        android:id="@+id/btn_spinner"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:text="@string/spinner"
        app:layout_constraintBottom_toTopOf="@+id/btn_btn"
        app:layout_constraintEnd_toStartOf="@+id/btn_edtTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_imgView" />

    <Button
        android:id="@+id/btn_edtTxt"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="24dp"
        android:text="@string/edittext"
        app:layout_constraintBottom_toTopOf="@+id/btn_numberPicker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_spinner"
        app:layout_constraintTop_toBottomOf="@+id/btn_lv" />

    <Button
        android:id="@+id/btn_btn"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="38dp"
        android:layout_marginBottom="125dp"
        android:text="@string/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_numberPicker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_spinner" />

    <Button
        android:id="@+id/btn_numberPicker"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="125dp"
        android:text="@string/numberpicker"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_btn"
        app:layout_constraintTop_toBottomOf="@+id/btn_edtTxt" />

</androidx.constraintlayout.widget.ConstraintLayout>